# csai

./: README.md  pyproject.toml  setup.py
capsolai/: solver.py
cs_ai/: __init__.py
cs_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
csolai/: __init__.py
csolai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.py
