[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csolai"
version = "0.1.0"
description = "API wrapper for captchasolver.ai"
authors = [
    { name = "Traili Cowyak", email = "admin@bombing.lol" }
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []
